--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 
-<h1>ATRAVÉZ DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>ATRA
+<h1>ATRAVÉZ DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 <p></p>#homem-aranha
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=iiY3IFamR0MMfPKG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
